# numina-app

./: LICENSE  README.md  pyproject.toml
src/numina_app/: detect.py  schema.py  task.ipynb
