[tool.poetry]
name = "numina-app"
version = "0.1.0"
description = ""
authors = ["Edward Huh <edward_huh@brown.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
ipykernel = "^6.13.1"
missingno = "^0.5.1"
pyarrow = "^8.0.0"
pandera = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
